--- a/index.html
+++ b/index.html
@@ -54,15 +54,29 @@
 			}
 		</style>
 		-->
-		<div class="card center padded" style="width:500px; height:700px">
-			<div style="font-family: 'Zilla Slab';">
+		<div class="card center padded" style="width:500px; height:700px;">
+			<div style="font-family: 'Zilla Slab'; font-size:22.9px;">
 				<div class="black padded rounded">
 					<p>My name is Cristian Gonzales, and I am currently a Computing Science student (rising senior) at the University of California,
 					Santa Cruz. I am currently interning at Northrop Grumman (Mission Systems). My interests lie in Data Science, more particularly 
 					in Data Visualization, Data Mining, Databases, and Machine Learning. I am also interested in general Software Development.</p>
 					<p>Outside of my work in the tech space, I am also interested in Security Analysis and Quantitative Finance. More particularly, I 
 					enjoy exploring the applications of Computing Science and Algorithms to Quantitative Finance. In my free time, I like to build 
-					things and valuate companies. Please feel free to reach out to me for any inquires.</p>
+					things and valuate companies. Please feel free to reach out to me for any inquiries.</p>
+					<hr />
+					<style>
+					// Brute-force hr tag
+					hr {
+						border: 0;
+						clear:both;
+						display:block;
+						width: 96%;               
+						background-color:#FFFF00;
+						height: 1px;
+					}
+					</style>
+					<p><u>Languages</u>: Ada, C, CSS, HTML, Java, JavaScript, MIPS Assembly, Python, SQL, Swift</p>
+					<p><u>Technologies</u>: Xcode (iOS Development), Android Studio (Android Development), Eclipse, Git, Linux, Unix</p>
 				</div>
 				<div class="black padded rounded">
 					<iframe src="my_resume.pdf" content-type="application/pdf" width="100%" height="100%" frameborder="0">
@@ -71,6 +85,11 @@
 				</div>
 			</div>
 		</div>
-		<div></div>
+		<div class="container">
+			<h4 class="padded white compressible center">Projects</h4>
+		</div>
+		<div class="container">
+			<h4 class="padded white compressible center">Blog</h4>
+		</div>
 	</body>
 </html>
