Resume section taken out and replaced with button

--- a/index.html
+++ b/index.html
@@ -20,17 +20,27 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col s4 center">
+				<div class="col custom-col center">
 					<a href="https://linkedin.com/in/cristiangonzales" target="_blank">
 						<img src="img/linkedin.png"></img>
 					</a>
 				</div>
-				<div class="col s4 center">
+				<div class="col custom-col center">
+					<a href="Cristian_Gonzales_Resume.pdf" target="_blank">
+						<img src="img/resume.png"></img>
+					</a>
+				</div>
+				<div class="col custom-col center">
+					<a href="https://medium.com/@xcristian.gonzales" target="_blank">
+						<img src="img/medium.png"></img>
+					</a>
+				</div>
+				<div class="col custom-col center">
 					<a href="mailto:xcristian.gonzales@gmail.com" target="_blank">
 						<img src="img/email.png"></img>
 					</a>
 				</div>
-				<div class="col s4 center">
+				<div class="col custom-col center">
 					<a href="https://github.com/cristiangonzales" target="_blank">
 						<img src="img/octocat.png"></img>
 					</a>
@@ -81,21 +91,6 @@
 						<a class="grey-text" href="https://github.com/cristiangonzales/SwiftySuncalc" target="_blank">Link to GitHub repo</a>
 					</div>
 				</div>
-			</div>
-		</div>
-		<div class="container space-mono">
-			<div class="row center">
-				<h4>Resume</h4>
-			</div>
-			<div class="row center">
-				<iframe src="Cristian_Gonzales_Resume.pdf" content-type="application/pdf" width="100%" height="1100px" frameborder="0">
-					<p>Your web browser does not support iFrame. You may view my resume <a href="https://github.com/cristiangonzales/My_Resume/blob/master/Cristian_Gonzales_Resume.pdf" target="_blank">here</a>.</p>
-				</iframe>
-			</div>
-		</div>
-		<div class="container space-mono">
-			<div class="row center">
-				<h4>Blog</h4>
 			</div>
 		</div>
 		<div class="footer-copyright">
