--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!--
 	Author: Cristian Gonzales
-
 -->
 <html>
 	<head>
@@ -59,8 +58,8 @@
 				</p>
 				<p>
 					My interests lie in Computer Security and Machine Learning. In my free time, I like to build things, valuate
-					companies, and occasionally play blackjack. I am currently only interested in open-source, pro-bono, and small
-					freelance opportunities at this time.
+					companies, and occasionally play blackjack. I am currently interested in open-source, pro-bono, and small
+					freelance opportunities.
 				</p>
 			</div>
 		</div>
