Changes to Resume

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					Northrop Grumman in Winter 2019 to work full-time as a Software Engineer.
 				</p>
 				<p>
-					My interests lie in Computer Security and Machine Learning. In my free time, I like to build things, valuate
+					My current interests lie in Machine Learning and general software development. In my free time, I like to build things, valuate
 					companies, and occasionally play blackjack. I am currently interested in open-source, pro-bono, and small
 					freelance opportunities.
 				</p>
