--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Cristian Gonzales</title>
+		<title>Cristian G.</title>
 		<link rel="icon" href="img/terminal.png" type="image/x-icon">
 		<link href="css/index.css" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="js/index.js"></script>
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<div class="container space-mono center">
-			<h1>CRISTIAN GONZALES</h1>
+			<h1>CRISTIAN G.</h1>
 		</div>
 		<div class="container">
 			<div class="row">
@@ -52,7 +52,7 @@
 			</div>
 			<div class="row">
 				<p>
-					My name is Cristian Gonzales, and I am currently an undergraduate Computing Science student at the University of
+					My name is Cristian, and I am currently an undergraduate Computing Science student at the University of
 					California, Santa Cruz. I have previously interned at Northrop Grumman (Mission Systems), and will be returning to
 					Northrop Grumman in Winter 2019 to work full-time as a Software Engineer.
 				</p>
@@ -94,7 +94,7 @@
 		</div>
 		<div class="footer-copyright">
 			<div class="container center space-mono">
-		    © 2018 Cristian Gonzales
+		    © 2018 Cristian G.
 			</div>
 		</div>
 	</body>
