Updated Resume added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					</a>
 				</div>
 				<div class="col custom-col center">
-					<a href="Cristian_Gonzales_Resume.pdf" target="_blank">
+					<a href="My_Resume.pdf" target="_blank">
 						<img src="img/resume.png"></img>
 					</a>
 				</div>
