--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
 					Northrop Grumman in Winter 2019 to work full-time as a Software Engineer.
 				</p>
 				<p>
-					My current interests lie in general software development. In my free time, I like to build things, valuate
-					companies, and occasionally play blackjack. I am currently interested in open-source, pro-bono, and small
-					freelance opportunities.
+					In my free time, I like to build things, valuate companies, and occasionally play blackjack. I am currently interested 
+					in open-source, pro-bono, and small freelance opportunities.
 				</p>
 			</div>
 		</div>
