--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Cristian G.</title>
+		<title>Cristian Gonzales</title>
 		<link rel="icon" href="img/terminal.png" type="image/x-icon">
 		<link href="css/index.css" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="js/index.js"></script>
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<div class="container space-mono center">
-			<h1>CRISTIAN G.</h1>
+			<h1>CRISTIAN GONZALES</h1>
 		</div>
 		<div class="container">
 			<div class="row">
@@ -93,7 +93,7 @@
 		</div>
 		<div class="footer-copyright">
 			<div class="container center space-mono">
-		    © 2018 Cristian G.
+		    © 2018 Cristian Gonzales
 			</div>
 		</div>
 	</body>
