--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 				<p>
 					My name is Cristian, and I am currently an undergraduate Computing Science student at the University of
 					California, Santa Cruz. I have previously interned at Northrop Grumman (Mission Systems), and will be returning to
-					Northrop Grumman in Winter 2019 to work full-time as a Software Engineer.
+					Northrop Grumman in July 2019 to work full-time as a Software Engineer.
 				</p>
 				<p>
 					In my free time, I like to build things, valuate companies, and occasionally play blackjack. I am currently interested 
-					in open-source, pro-bono, and small freelance opportunities.
+					in open-source, pro-bono, remote, and small freelance opportunities.
 				</p>
 			</div>
 		</div>
