Introducing 'welcome' component to the page

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 			</div>
 			<div class="row">
 				<p>
-					My name is Cristian, and I am currently an undergraduate Computing Science student at the University of
-					California, Santa Cruz. I have previously interned at Northrop Grumman (Mission Systems), and will be returning to
-					Northrop Grumman in July 2019 to work full-time as a Software Engineer.
+					My name is Cristian, and I am currently a full-time Software Engineer at Northrop Grumman (Mission Systems), and I work at Space Park in
+          sunny Redondo Beach, California &#x2600 I completed my Bachelor's of Science degree in Computing Science student at the University of
+					California, Santa Cruz. I have previously interned at Northrop Grumman (Mission Systems).
 				</p>
 				<p>
-					In my free time, I like to build things, valuate companies, and occasionally play blackjack. I am currently interested 
-					in open-source, pro-bono, remote, and small freelance opportunities.
+					In my free time, I like to build things, valuate companies, work-out, and occasionally play blackjack. For tech recruiters, I am currently 
+          interested in open-source, pro-bono, remote, and small freelance opportunities.
 				</p>
 			</div>
 		</div>
