--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script type="text/javascript" src="js/index.js"></script>
+    <!-- <script type="text/javascript" src="js/index.js"></script> -->
 	</head>
 	<body>
     <!--
@@ -55,7 +55,7 @@
   		</div>
     </div>
     -->
-    <div id="main">
+    <!-- <div id="main"> -->
   		<div class="container space-mono center">
   			<h1>CRISTIAN GONZALES</h1>
   		</div>
@@ -144,6 +144,6 @@
   		    © 2018 Cristian Gonzales
   			</div>
   		</div>
-    </div>
+      <!-- </div> -->
 	</body>
 </html>
