--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
   					</a>
   				</div>
   				<div class="col custom-col center">
+  					<a href="https://github.com/cristiangonzales" target="_blank">
+  						<img src="img/octocat.png"></img>
+  					</a>
+  				</div>
+  				<div class="col custom-col center">
   					<a href="My_Resume.pdf" target="_blank">
   						<img src="img/resume.png"></img>
   					</a>
@@ -82,8 +87,13 @@
   					</a>
   				</div>
   				<div class="col custom-col center">
-  					<a href="https://github.com/cristiangonzales" target="_blank">
-  						<img src="img/octocat.png"></img>
+  					<a href="https://www.youtube.com/channel/UCvFFmIngnHRZB6skI8wu-sA" target="_blank">
+  						<img src="img/youtube.png"></img>
+  					</a>
+  				</div>
+  				<div class="col custom-col center">
+  					<a href="https://instagram.com/_cristiangonzales" target="_blank">
+  						<img src="img/instagram.png"></img>
   					</a>
   				</div>
   			</div>
