--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <h5>My name is Cristian, and...</h5>
           <p class="source-code-pro bullet-pt">> I am currently a full-time Software Engineer at Northrop Grumman (Mission Systems) &#x1F680</p>
           <p class="source-code-pro bullet-pt">> I work at Space Park in sunny Redondo Beach, California &#x1F307</p>
-          <p class="source-code-pro bullet-pt">> I completed my Bachelor's of Science degree in Computing Science student at the University of California, Santa Cruz &#x1F393</p>
+          <p class="source-code-pro bullet-pt">> I completed my Bachelor's of Science degree in Computing Science at the University of California, Santa Cruz &#x1F393</p>
           <p class="source-code-pro bullet-pt">> I have previously interned at Northrop Grumman (Mission Systems) &#x1F916</p>
           <h5>In my free time, I like to...</h5>
           <p class="source-code-pro bullet-pt">> build things &#x1F4BB</p>
